--- a/GGJ2023/Packages/manifest.json
+++ b/GGJ2023/Packages/manifest.json
@@ -11,7 +11,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
-    "me.ameye.prefab-painter": "file:D:/GGJ2023 Folder/prefab-painter-master/prefab-painter-master",
+    "me.ameye.prefab-painter": "file:../Prefab Painter/prefab-painter-master/prefab-painter-master",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
